--- a/05_mybatis/src/main/java/mybatis/mybatis.properties
+++ b/05_mybatis/src/main/java/mybatis/mybatis.properties
@@ -1,5 +1,5 @@
 # mybatis/mybatis.properties
 driver=com.mysql.cj.jdbc.Driver
 url=jdbc:mysql://localhost:3306/db_mybatis?characterEncoding=UTF-8&serverTimezone=UTC
-username=shining
-password=shining
+username=goodee
+password=goodee
